...
        questionFactory = QuestionFactory(moviesLoader: MoviesLoader(), delegate: self)
        questionFactory?.loadData()
        viewController.showLoadingIndicator()
    }
    
    private enum Constants {
        static let resultsTitle = "Этот раунд окончен!"
        static let playAgainButtonText = "Сыграть ещё раз"
        static let statsErrorMessage = "Ошибка загрузки статистики"
        static let noRecordMessage = "Рекорд: ещё не установлен"
        static let resultLabel = "Ваш результат: "
        static let gamesCountLabel = "Количество сыгранных квизов: "
        static let averageAccuracyLabel = "Средняя точность: "
...
